Fixing Cluster Settings layout (#651)
* A bit of cleaning in Add Cluster page


* Adding head-col to WizardLayout


* Fixing Cluster Settings general layout bugs


* Cluster Status view refactoring


* Install Metrics component refactoring

Using notifications for error, removed picking
button icon method, simplified button generation.


* Remove icons / checks from RemoveClusterButton


* Fixing colorError in Input styles


* Preventing Input's spellchecking


* ClusterNameSettings refactoring


* ClusterWorkspaceSettings refactoring/fixing


* ClusterProxySetting refactoring


* ClusterPrometheusSetting refactoring


* Clean up Removal section


* Glued InstallMetrics & InstallUserMode into 1 component


* Removing unused styles in Cluster Settings


* Cluster Settings styling


* Adding close button to settings header


* ClusterHomeDirSetting refactoring


* FilePicker restyling


* Fixing Prometheus selector


* Fixing Hashicon

Passing cluster name instead of cluster id to prevent
icon changing while typing new
cluster name


* Minor ClusterSettings fixes


* Increasing opacity for non-interactive icons


* Keep feature install loading state

Waiting for props to change before
disabling loading state (gray button
width spinner)


* Remove arrays in disposeOnUnmount()


* Fix Cluster select behavior

Now clicking cluster icon in sidebar
always leads to / dashboard. And
'Settings' submenu switches active
cluster at first and only the showing
Cluster Settings


* Using structuralComparator in feature installer


* Saving input fields on blur


* Setting Select color same as Input color

--- a/src/renderer/components/layout/wizard-layout.scss
+++ b/src/renderer/components/layout/wizard-layout.scss
@@ -13,6 +13,11 @@
     padding: $spacing;
   }
 
+  > .head-col {
+    position: sticky;
+    border-bottom: 1px solid $grey-800;
+  }
+
   > .content-col {
     margin-right: $spacing;
     background-color: var(--clusters-menu-bgc);
@@ -27,6 +32,10 @@
 
   > .info-col {
     border-left: 1px solid #353a3e;
+  }
+
+  p {
+    line-height: 140%;
   }
 
   a {
